# File-Operations

./: .gitignore  README.md  file_writers.py  pyproject.toml
src/: collection.py  file_exceptions.py
src/file_operations_mn/: file_exceptions.py  file_utilities.py  file_utilities_read.py  file_utilities_write.py  file_writers.py  path_string_utilities.py  printing_decorators.py
tests/: file_operations_tests.py
